--- a/equity_calcs.ipynb
+++ b/equity_calcs.ipynb
@@ -16,6 +16,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def beta_matrix(covariance_matrix, standard_deviations, beta_reference, name_reference):\n",
+    "    df_beta =  pd.DataFrame(0, index=covariance_matrix.columns, columns=covariance_matrix.columns)\n",
+    "    \n",
+    "    # Set reference asset classes to 1\n",
+    "    for i in range(len(df_beta.columns)):\n",
+    "        df_beta.iloc[i, i] = 1\n",
+    "    \n",
+    "    # Calculate all betas\n",
+    "    beta_calc = []\n",
+    "    for i in range(len(covariance_matrix.columns)):\n",
+    "        sub = df_beta.iloc[i,:].dot(covariance_matrix).div(standard_deviations.iloc[i,:].values[0]**2)\n",
+    "        beta_calc.append(sub)\n",
+    "    df_beta_calc = pd.DataFrame(beta_calc).T\n",
+    "    \n",
+    "    # Create dataframe with beta results\n",
+    "    df_beta_relative_beta = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if beta_reference in k}.values())))\n",
+    "    df_beta_relative_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if name_reference in k}.values())))\n",
+    "    df_beta_relative = pd.DataFrame(zip(df_beta_relative_name, df_beta_relative_beta), columns =['Asset Class', 'Beta Relative To']).set_index('Asset Class')\n",
+    "    df_expected_return = df_beta_calc.join(df_beta_relative, how='outer')\n",
+    "    \n",
+    "    return df_expected_return, df_beta_calc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# USD"
    ]
   },
@@ -28,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate building block asset classes\n",
-    "cash = 2.50\n",
+    "cash = 2.60\n",
     "\n",
     "us_equity_return = cma.val_dict['us_inflation'] + cma.val_dict['us_reg'] + cma.val_dict['us_equity_income'] +\\\n",
     "    cma.val_dict['us_equity_val'] + cma.val_dict['us_equity_buyback']\n",
@@ -56,47 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import returns\n",
     "df_returns_us = pd.read_csv('P:\\\\Advisory\\\\Research\\\\Automation\\\\CMAs\\\\Data\\\\combined_returns_us.csv', index_col=0)\n",
     "\n",
-    "# Beta references\n",
-    "df_beta = df_returns_us.iloc[:6, :].copy(deep=True)\n",
-    "df_beta.index = ['Commodities', 'Global Emerging Markets Equity', 'Global Equity',\n",
-    "                    'International Developed Equity', 'U.S. Equity', 'U.S. REIT']\n",
-    "\n",
-    "# Set all values to 0 initially\n",
-    "for col in df_beta.columns:\n",
-    "    df_beta[col].values[:] = 0\n",
-    "    \n",
-    "# Set reference asset classes to 1\n",
-    "df_beta.loc['Commodities', 'Commodities'] = 1\n",
-    "df_beta.loc['Global Emerging Markets Equity', 'Global Emerging Markets Equity'] = 1\n",
-    "df_beta.loc['Global Equity', 'Global Equity'] = 1\n",
-    "df_beta.loc['International Developed Equity', 'International Developed Equity'] = 1\n",
-    "df_beta.loc['U.S. Equity', 'U.S. Equity'] = 1\n",
-    "df_beta.loc['U.S. REIT', 'U.S. REIT'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Beta Matrix\n",
-    "df_beta_comm = (df_beta.loc['Commodities',:]).dot(std_dev.exp_cov_us).div(std_dev.annual_adj_std_dev_us.loc['Commodities',:].values[0]**2)\n",
-    "df_beta_em = (df_beta.loc['Global Emerging Markets Equity',:]).dot(std_dev.exp_cov_us).div(std_dev.annual_adj_std_dev_us.loc['Global Emerging Markets Equity',:].values[0]**2)\n",
-    "df_beta_global = (df_beta.loc['Global Equity',:]).dot(std_dev.exp_cov_us).div(std_dev.annual_adj_std_dev_us.loc['Global Equity',:].values[0]**2)\n",
-    "df_beta_intl = (df_beta.loc['International Developed Equity',:]).dot(std_dev.exp_cov_us).div(std_dev.annual_adj_std_dev_us.loc['International Developed Equity',:].values[0]**2)\n",
-    "df_beta_us = (df_beta.loc['U.S. Equity',:]).dot(std_dev.exp_cov_us).div(std_dev.annual_adj_std_dev_us.loc['U.S. Equity',:].values[0]**2)\n",
-    "df_beta_us_reit = (df_beta.loc['U.S. REIT',:]).dot(std_dev.exp_cov_us).div(std_dev.annual_adj_std_dev_us.loc['U.S. REIT',:].values[0]**2)\n",
-    "\n",
-    "df_beta_reference = pd.concat([df_beta_comm, df_beta_em, df_beta_global, df_beta_intl, df_beta_us, df_beta_us_reit], axis=1)\n",
-    "df_beta_reference"
+    "df_expected_return_us, df_beta_reference_us = beta_matrix(std_dev.exp_cov_us, std_dev.annual_adj_std_dev_us, 'equity_us_beta', 'equity_us_name')    "
    ]
   },
   {
@@ -105,11 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create beta dataframe\n",
-    "df_beta_relative_beta = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'equity_us_beta' in k}.values())))\n",
-    "df_beta_relative_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'equity_us_name' in k}.values())))\n",
-    "df_beta_relative = pd.DataFrame(zip(df_beta_relative_name, df_beta_relative_beta), columns =['Asset Class', 'Beta Relative To']).set_index('Asset Class')\n",
-    "df_expected_return = df_beta_reference.join(df_beta_relative, how='outer')"
+    "# Fill in building block returns\n",
+    "df_expected_return_us['Expected Return'] = 'NaN'\n",
+    "\n",
+    "df_expected_return_us.loc[['U.S. Equity', 'Global Equity', 'International Developed Equity', 'Global Emerging Markets Equity'], 'Expected Return'] = (\n",
+    "    us_equity_return, gl_equity_return, intl_equity_return, em_equity_return)"
    ]
   },
   {
@@ -118,24 +121,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fill in building block returns\n",
-    "df_expected_return['Expected Return'] = 'NaN'\n",
-    "\n",
-    "df_expected_return.loc[['U.S. Equity', 'Global Equity', 'International Developed Equity', 'Global Emerging Markets Equity'], 'Expected Return'] = (\n",
-    "    us_equity_return, gl_equity_return, intl_equity_return, em_equity_return)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Fill in beta-relative returns\n",
-    "df_expected_return.loc[df_expected_return['Beta Relative To'] == 'Global Emerging Markets Equity', 'Expected Return'] = ((em_equity_return - cash) * df_expected_return['Global Emerging Markets Equity'] + cash)\n",
-    "df_expected_return.loc[df_expected_return['Beta Relative To'] == 'Global Equity', 'Expected Return'] = ((gl_equity_return - cash) * df_expected_return['Global Equity'] + cash)\n",
-    "df_expected_return.loc[df_expected_return['Beta Relative To'] == 'International Developed Equity', 'Expected Return'] = ((intl_equity_return - cash) * df_expected_return['International Developed Equity'] + cash)\n",
-    "df_expected_return.loc[df_expected_return['Beta Relative To'] == 'U.S. Equity', 'Expected Return'] = ((us_equity_return - cash) * df_expected_return['U.S. Equity'] + cash)"
+    "df_expected_return_us.loc[df_expected_return_us['Beta Relative To'] == 'Global Emerging Markets Equity', 'Expected Return'] = ((em_equity_return - cash) * df_expected_return_us['Global Emerging Markets Equity'] + cash)\n",
+    "df_expected_return_us.loc[df_expected_return_us['Beta Relative To'] == 'Global Equity', 'Expected Return'] = ((gl_equity_return - cash) * df_expected_return_us['Global Equity'] + cash)\n",
+    "df_expected_return_us.loc[df_expected_return_us['Beta Relative To'] == 'International Developed Equity', 'Expected Return'] = ((intl_equity_return - cash) * df_expected_return_us['International Developed Equity'] + cash)\n",
+    "df_expected_return_us.loc[df_expected_return_us['Beta Relative To'] == 'U.S. Equity', 'Expected Return'] = ((us_equity_return - cash) * df_expected_return_us['U.S. Equity'] + cash)"
    ]
   },
   {
@@ -149,12 +139,12 @@
        "Global Emerging Markets Equity        8.5\n",
        "Global Equity                       6.477\n",
        "International Developed Equity        6.2\n",
-       "International Small Cap Equity    6.22351\n",
+       "International Small Cap Equity    6.19655\n",
        "U.S. Equity                           6.3\n",
-       "U.S. Large Cap Equity             6.24387\n",
-       "U.S. Micro Cap Equity             6.90279\n",
-       "U.S. Mid Cap Equity               6.57045\n",
-       "U.S. Small Cap Equity              6.9934\n",
+       "U.S. Large Cap Equity             6.24789\n",
+       "U.S. Micro Cap Equity             6.86754\n",
+       "U.S. Mid Cap Equity               6.55535\n",
+       "U.S. Small Cap Equity             6.94282\n",
        "Name: Expected Return, dtype: object"
       ]
      },
@@ -165,10 +155,8 @@
    ],
    "source": [
     "# Finalize expected returns\n",
-    "equity_returns_us = df_expected_return.dropna(subset=['Beta Relative To'])\n",
-    "equity_returns_us = equity_returns_us.loc[:,'Expected Return']\n",
-    "\n",
-    "equity_returns_us"
+    "equity_returns_us = df_expected_return_us.dropna(subset=['Beta Relative To'])\n",
+    "equity_returns_us = equity_returns_us.loc[:,'Expected Return']"
    ]
   },
   {
@@ -187,12 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate building block asset classes\n",
-    "cash_nonus = 2.60\n",
+    "cash_nonus = 2.50\n",
     "\n",
     "us_equity_return = cma.val_dict['us_inflation'] + cma.val_dict['us_equity_income'] + cma.val_dict['us_equity_buyback'] +\\\n",
     "                    cma.val_dict['us_real_gdp'] + cma.val_dict['us_equity_val']\n",
@@ -222,54 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import returns\n",
     "df_returns_nonus = pd.read_csv('P:\\\\Advisory\\\\Research\\\\Automation\\\\CMAs\\\\Data\\\\combined_returns_nonus.csv', index_col=0)\n",
     "\n",
-    "# Beta references\n",
-    "df_beta_nonus = df_returns_nonus.iloc[:4, :].copy(deep=True)\n",
-    "df_beta_nonus.index = ['U.S. Equity', 'Europe Ex-UK Equity', 'Japan Equity', 'USD_U.S. Equity']\n",
-    "\n",
-    "# Set all values to 0 initially\n",
-    "for col in df_beta_nonus.columns:\n",
-    "    df_beta_nonus[col].values[:] = 0\n",
-    "    \n",
-    "# Set reference asset classes to 1\n",
-    "df_beta_nonus.loc['U.S. Equity', 'U.S. Equity'] = 1\n",
-    "df_beta_nonus.loc['Europe Ex-UK Equity', 'Europe Ex-UK Equity'] = 1\n",
-    "df_beta_nonus.loc['Japan Equity', 'Japan Equity'] = 1\n",
-    "df_beta_nonus.loc['USD_U.S. Equity', 'USD_U.S. Equity'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Beta Matrix\n",
-    "df_beta_us_nonus = (df_beta_nonus.loc['U.S. Equity',:]).dot(std_dev.exp_cov_nonus).div(std_dev.annual_adj_std_dev_nonus.loc['U.S. Equity',:].values[0]**2)\n",
-    "df_beta_europe_ex_uk_nonus = (df_beta_nonus.loc['Europe Ex-UK Equity',:]).dot(std_dev.exp_cov_nonus).div(std_dev.annual_adj_std_dev_nonus.loc['Europe Ex-UK Equity'].values[0]**2)\n",
-    "df_beta_japan_nonus = (df_beta_nonus.loc['Japan Equity',:]).dot(std_dev.exp_cov_nonus).div(std_dev.annual_adj_std_dev_nonus.loc['Japan Equity'].values[0]**2)\n",
-    "df_beta_us_usd_nonus = (df_beta_nonus.loc['USD_U.S. Equity',:]).dot(std_dev.exp_cov_nonus).div(std_dev.annual_adj_std_dev_nonus.loc['USD_U.S. Equity'].values[0]**2)\n",
-    "\n",
-    "df_beta_reference_nonus = pd.concat([df_beta_us_nonus, df_beta_europe_ex_uk_nonus, df_beta_japan_nonus, df_beta_us_usd_nonus], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create beta dataframe\n",
-    "df_beta_relative_beta_nonus = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'equity_nonus_beta' in k}.values())))\n",
-    "df_beta_relative_name_nonus = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'equity_nonus_name' in k}.values())))\n",
-    "df_beta_relative_nonus = pd.DataFrame(zip(df_beta_relative_name_nonus, df_beta_relative_beta_nonus), columns =['Asset Class', 'Beta Relative To']).set_index('Asset Class')\n",
-    "df_expected_return_nonus = df_beta_reference_nonus.join(df_beta_relative_nonus, how='outer')"
+    "df_expected_return_nonus, df_beta_reference_nonus = beta_matrix(std_dev.exp_cov_nonus, std_dev.annual_adj_std_dev_nonus, 'equity_nonus_beta', 'equity_nonus_name')   "
    ]
   },
   {
@@ -281,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -308,40 +256,22 @@
    "source": [
     "#Fill in beta-relative returns\n",
     "df_expected_return_nonus.loc[df_expected_return_nonus['Beta Relative To'] == 'U.S. Equity', 'Expected Return'] = \\\n",
-    "    ((df_expected_return_nonus.loc['U.S. Equity','Expected Return'] - cash) * df_expected_return_nonus['U.S. Equity'] + cash)\n",
+    "    ((df_expected_return_nonus.loc['U.S. Equity','Expected Return'] - cash_nonus) * df_expected_return_nonus['U.S. Equity'] + cash_nonus)\n",
     "\n",
     "df_expected_return_nonus.loc[df_expected_return_nonus['Beta Relative To'] == 'Europe Ex-UK Equity', 'Expected Return'] = \\\n",
-    "    ((df_expected_return_nonus.loc['Europe Ex-UK Equity','Expected Return'] - cash) * df_expected_return_nonus['Europe Ex-UK Equity'] + cash)\n",
+    "    ((df_expected_return_nonus.loc['Europe Ex-UK Equity','Expected Return'] - cash_nonus) * df_expected_return_nonus['Europe Ex-UK Equity'] + cash_nonus)\n",
     "\n",
     "df_expected_return_nonus.loc[df_expected_return_nonus['Beta Relative To'] == 'Japan Equity', 'Expected Return'] = \\\n",
-    "    ((df_expected_return_nonus.loc['Japan Equity','Expected Return'] - cash) * df_expected_return_nonus['Japan Equity'] + cash)"
+    "    ((df_expected_return_nonus.loc['Japan Equity','Expected Return'] - cash_nonus) * df_expected_return_nonus['Japan Equity'] + cash_nonus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "U.S. Equity                                     6.2\n",
-       "U.S. Small Cap Equity                        6.6803\n",
-       "Europe Ex-UK Equity                            6.45\n",
-       "Europe Small Cap Equity                     6.27193\n",
-       "UK Equity                                      7.05\n",
-       "Japan Equity                                   4.35\n",
-       "Japan Small Cap Equity                      4.32093\n",
-       "Developed Market Pacific Ex-Japan Equity       8.25\n",
-       "Global Emerging Markets Equity                  8.4\n",
-       "Name: Expected Return, dtype: object"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 15,
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
    "source": [
     "# Finalize expected returns\n",
     "equity_returns_nonus = df_expected_return_nonus.dropna(subset=['Beta Relative To'])\n",
@@ -352,14 +282,15 @@
     "    \"P:\\\\Advisory\\\\Research\\\\Automation\\\\CMAs\\\\Data\\\\bloomberg_data_nonus.xlsx\", sheet_name='equity_returns', index_col=0)\n",
     "expected_return_equity_nonus_order = df_equity_nonus.columns.tolist()\n",
     "\n",
-    "equity_returns_nonus = equity_returns_nonus.reindex(index=expected_return_equity_nonus_order)\n",
-    "equity_returns_nonus"
+    "equity_returns_nonus = equity_returns_nonus.reindex(index=expected_return_equity_nonus_order)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
