--- a/main.ipynb
+++ b/main.ipynb
@@ -39,7 +39,7 @@
     "    import std_dev\n",
     "#    import fixed_income_calcs\n",
     "    import equity_calcs\n",
-    "#    import alts\n",
+    "    import alts\n",
     "    print('values were same')\n",
     "else:\n",
     "    import data_pull\n",
@@ -47,7 +47,7 @@
     "    import std_dev\n",
     "#    import fixed_income_calcs\n",
     "    import equity_calcs\n",
-    "#    import alts\n",
+    "    import alts\n",
     "    print('values were different')"
    ]
   },
@@ -148,21 +148,93 @@
        "      <td>8.5</td>\n",
        "      <td>21.2</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Absolute Return</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>5.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hedge Funds</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hedge Funds - Equity Hedge</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hedge Funds - Event Driven</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>5.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hedge Funds - Macro</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>4.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hedge Funds - Relative Value</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hedge Funds - Managed Futures</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>10.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Commodities</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>14.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Global Natural Resources Equity</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>19.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>U.S. REIT</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Global REIT</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>17.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Energy Infrastructure</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>19.1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                Expected Return  Standard Deviation\n",
-       "U.S. Equity                                 6.3                14.9\n",
-       "U.S. Large Cap Equity                       6.2                14.7\n",
-       "U.S. Mid Cap Equity                         6.6                16.5\n",
-       "U.S. Small Cap Equity                       7.0                19.6\n",
-       "U.S. Micro Cap Equity                       6.9                21.0\n",
-       "Global Equity                               6.5                15.1\n",
-       "International Developed Equity              6.2                16.5\n",
-       "International Small Cap Equity              6.2                17.6\n",
-       "Global Emerging Markets Equity              8.5                21.2"
+       "                                 Expected Return  Standard Deviation\n",
+       "U.S. Equity                                  6.3                14.9\n",
+       "U.S. Large Cap Equity                        6.2                14.7\n",
+       "U.S. Mid Cap Equity                          6.6                16.5\n",
+       "U.S. Small Cap Equity                        7.0                19.6\n",
+       "U.S. Micro Cap Equity                        6.9                21.0\n",
+       "Global Equity                                6.5                15.1\n",
+       "International Developed Equity               6.2                16.5\n",
+       "International Small Cap Equity               6.2                17.6\n",
+       "Global Emerging Markets Equity               8.5                21.2\n",
+       "Absolute Return                              4.6                 5.2\n",
+       "Hedge Funds                                  4.7                 5.7\n",
+       "Hedge Funds - Equity Hedge                   5.5                 8.0\n",
+       "Hedge Funds - Event Driven                   4.8                 5.9\n",
+       "Hedge Funds - Macro                          4.4                 4.9\n",
+       "Hedge Funds - Relative Value                 4.2                 4.0\n",
+       "Hedge Funds - Managed Futures                5.4                10.3\n",
+       "Commodities                                  2.2                14.6\n",
+       "Global Natural Resources Equity              6.1                19.9\n",
+       "U.S. REIT                                    6.0                21.0\n",
+       "Global REIT                                  6.2                17.7\n",
+       "Energy Infrastructure                        6.6                19.1"
       ]
      },
      "execution_count": 3,
@@ -171,7 +243,7 @@
     }
    ],
    "source": [
-    "df_final_us = pd.concat([equity_calcs.equity_returns_us])\n",
+    "df_final_us = pd.concat([equity_calcs.equity_returns_us, alts.alts_returns_us])\n",
     "df_final_us = pd.DataFrame(df_final_us)\n",
     "\n",
     "# Combine Expected Returns with Standard Deviation\n",
@@ -184,7 +256,12 @@
     "\n",
     "# Reorder\n",
     "equity_us_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'equity_us_name' in k}.values())))\n",
-    "df_final_us = df_final_us.reindex(index=equity_us_name)\n",
+    "#fixed_us_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'fixed_us_name' in k}.values())))\n",
+    "alts_us_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'alts_us_name' in k}.values())))\n",
+    "\n",
+    "order_name = equity_us_name + alts_us_name\n",
+    "\n",
+    "df_final_us = df_final_us.reindex(index=order_name)\n",
     "df_final_us"
    ]
   },
@@ -271,6 +348,16 @@
        "      <td>8.4</td>\n",
        "      <td>19.7</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Long-Short Equity</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>9.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Global Macro</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>9.9</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -285,7 +372,9 @@
        "Japan Equity                                          4.4                15.0\n",
        "Japan Small Cap Equity                                4.3                16.8\n",
        "Developed Market Pacific Ex-Japan Equity              8.2                18.3\n",
-       "Global Emerging Markets Equity                        8.4                19.7"
+       "Global Emerging Markets Equity                        8.4                19.7\n",
+       "Long-Short Equity                                     5.7                 9.3\n",
+       "Global Macro                                          4.9                 9.9"
       ]
      },
      "execution_count": 5,
@@ -294,7 +383,7 @@
     }
    ],
    "source": [
-    "df_final_nonus = pd.concat([equity_calcs.equity_returns_nonus])\n",
+    "df_final_nonus = pd.concat([equity_calcs.equity_returns_nonus, alts.alts_returns_nonus])\n",
     "df_final_nonus = pd.DataFrame(df_final_nonus)\n",
     "\n",
     "# Combine Expected Returns with Standard Deviation\n",
@@ -307,9 +396,21 @@
     "\n",
     "# Reorder\n",
     "equity_nonus_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'equity_nonus_name' in k}.values())))\n",
-    "df_final_nonus = df_final_nonus.reindex(index=equity_nonus_name)\n",
+    "#fixed_us_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'fixed_us_name' in k}.values())))\n",
+    "alts_nonus_name = list(filter(None, list({k:v for (k,v) in cma.val_dict.items() if 'alts_nonus_name' in k}.values())))\n",
+    "\n",
+    "order_name_nonus = equity_nonus_name + alts_nonus_name\n",
+    "df_final_nonus = df_final_nonus.reindex(index=order_name_nonus)\n",
+    "\n",
     "df_final_nonus"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
